--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Bevan"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Kavoon"
+      rel="stylesheet"
+    />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
